# Prompt-IQ-Test

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
question-bank/dynamic/: builtin-dynamic-agent_workflow-001.json  builtin-dynamic-planning_analysis-001.json
question-bank/static/: builtin-static-agent_workflow-001.json  builtin-static-coding_debug-001.json  builtin-static-daily_qa-001.json  builtin-static-data_table-001.json  builtin-static-planning_analysis-001.json  builtin-static-writing-001.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_client.rs  db.rs  lib.rs  main.rs  question_bank.rs
src/components/: PageSection.tsx  StatusPill.tsx
src/lib/: tauri.ts
src/pages/: AboutPage.tsx  AssessmentSetupPage.tsx  DynamicAssessmentPage.tsx  HistoryDetailPage.tsx  HistoryListPage.tsx  HomePage.tsx  NotFoundPage.tsx  PluginMarketPage.tsx  ResultReportPage.tsx  SettingsPage.tsx  StaticAssessmentPage.tsx  VentGamePage.tsx
